Fixed the text boxes in the envelope and postcard so that the texts are left-aligned

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ h1{
 
 .picture{
     position: relative;
-    text-align: center;
 }
 
 .sender{
